# autoplier

./: .flake8  .gitignore  LICENSE  Makefile  README.md  main.py  requirements.txt  setup.cfg
.github/workflows/: build.yaml
R/: .Rhistory  query_hmdb.Rmd  refmet_results.txt  refmet_results_example.txt
autoplier/: model.py  plot.py  retrain.py
packagename/: __init__.py  model.py  plot.py
src/: __init__.py  core.py
tests/: test_model.py  test_noop.py  test_plot.py
tests/test_data/: test_pathways.csv  testdata.npy
