[metadata]
name = autoplier
version = 0.0.1
author = Julian Borbeck
author_email = julian.borbeck@gmail.com
description = A Tensorflow Autoencoder to reduce the dimensionality of RNAseq data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bishop-Laboratory/CellO-MultiPLIER
project_urls =
    Bug Tracker = https://github.com/Bishop-Laboratory/CellO-MultiPLIER/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = autoplier
packages = find:
python_requires = >=3.6

[options.packages.find]
where = autoplier